[BZ #3632]

* include/features.h: Fix comment about default value for
	_POSIX_C_SOURCE.